# zjofecmeui

./: Cargo.toml  Cross.toml  MANIFEST.in  README.md  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/workflows/: CI.yml
examples/: flocking.py
imagine/: camera.rs  color.rs  frame.rs  lib.rs  main_scene.rs  models.rs  renderer.rs  scene_children.rs  shader.rs
imagine/math/: matrix.rs  mod.rs  vector.rs
imagine/objects/: basic_shapes.rs  imagine_object.rs  mod.rs  svg.rs
tests/: test_color.py  test_frame.py  test_main_scene.py
